[package]
name = "streak"
version = "0.1.0"
edition = "2021"
authors = ["Guru Senthil"]
description = """
streak (noun) [/strēk/]: a continuous period of specified success or luck.
Create, view and track streaks to develop lasting habits by creating 
positive reward signals.
"""

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
rusqlite = { version = "0.29.0" }
chrono = {}
